merge from dev-slah + update